# Pulsar

./: .gitignore  .gitmodules  CMakeLists.txt  ShutdownVS.bat  UpdateCorlib.bat  main.cpp  readme.md
CoreLib/: Assembly.cpp  Assembly.h  BasicTypes.cpp  BasicTypes.h  CMakeLists.txt  CommonException.h  Converter.hpp  Core.h  DebugTool.hpp  Delegate.h  Enum.h  File.cpp  File.h  Guid.h  Object.cpp  Object.h  Reflection.cpp  Type.cpp  Type.h  UString.cpp  UString.h  istring.cpp
Pulsar/: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  Setup.py  build-debug-projected.bat  build-debug-pulsared.bat  build-ninja.bat  build-release-projected.bat  build-release-pulsared.bat  main.cpp  readme.md  regen-cmake-ninja-release.bat  regen-cmake-ninja.bat  run-debug-editor.bat  run-editor.bat  run-release-editor.bat  uiconfig.json
Pulsar/Assets/Assets/: lambert.shader
Pulsar/CoreLib/: CommonException.h  Enum.cpp  EnumUtil.h  Events.hpp  File.h  Object.h  Reflection.h  Type.cpp  istring.h  time_counter.h
Pulsar/CoreLib.Math/: Jmath.h  Math.cpp
Pulsar/CoreLib.Platform/: Window.h
Pulsar/CoreLib.Serialization/: JsonSerializer.h
Pulsar/Pulsar/: AppInstance.cpp  Application.cpp  Application.h  AssetObject.h  AssetRegistry.cpp  AssetRegistry.h  CMakeLists.txt  EngineAppInstance.h  IBindGPU.h  ImGuiImpl.cpp  Math.cpp  Node.h  ObjectBase.h  Scene.cpp  Subsystem.cpp  Subsystem.h  TransformUtil.h  World.h
Pulsar/Pulsar/Assets/: CubeMap.cpp  CubeMap.h  Material.cpp  Mesh.cpp  Mesh.h  RenderTexture.h  Shader.cpp  Shader.h  StaticMesh.cpp  StaticMesh.h  TextAsset.cpp  TextAsset.h  Texture2D.cpp
Pulsar/Pulsar/Basics/: RuntimePtr.h
Pulsar/Pulsar/BuiltinRP/: BuiltinRP.cpp
Pulsar/Pulsar/Components/: CameraComponent.h  Component.cpp  Component.h  MeshContainerComponent.h  PlayableComponent.h  RendererComponent.cpp  StaticMeshRendererComponent.h
Pulsar/Pulsar/Private/: InputInterface.h  SystemInterface.h
Pulsar/Pulsar/Private/Windows/: InputInterface.cpp  ResourceInterface.cpp  SystemInterface.cpp
Pulsar/Pulsar/Rendering/: ConstantBuffer.cpp  ConstantBuffer.h  IShadeParameters.h  MaterialUtil.h  RenderContext.cpp  ShaderPass.cpp
Pulsar/Pulsar/Rendering/Pipelines/: Pipeline.h
Pulsar/PulsarEd/: Assembly.h  AssetDatabase.cpp  CMakeLists.txt  EditorAppInstance.cpp  EditorLayout.h  EditorLogRecorder.h  EditorNode.cpp  EditorSelection.h  EditorUIConfig.h  EditorWorld.h  RenderController.cpp  SelectionSet.h  Workspace.cpp  Workspace.h
Pulsar/PulsarEd/AssetProviders/: AssetProvider.cpp  AssetProvider.h  MeshAssetProvider.cpp
Pulsar/PulsarEd/Components/: EditorComponent.h  StdEditCameraControllerComponent.h
Pulsar/PulsarEd/EditorModes/: EditorMode.cpp  EditorMode.h
Pulsar/PulsarEd/Importers/: FBXImporter.cpp  FBXImporter.h
Pulsar/PulsarEd/Menus/: MenuContext.h
Pulsar/PulsarEd/PropertyControls/: ColorPropertyControl.h  FloatPropertyControl.cpp  FloatPropertyControl.h  MaterialPropertyControl.h  PropertyControl.h  Quat4fPropertyControl.h  Vector2fPropertyControl.h  Vector3fPropertyControl.cpp
Pulsar/PulsarEd/Windows/: ConsoleWindow.h  DockspaceWindow.cpp  EditorWindow.cpp  EditorWindow.h  EditorWindowManager.cpp  OutlinerWindow.cpp  OutputWindow.cpp  OutputWindow.h  SceneWindow.h
Pulsar/PulsarGEd/: Assembly.h
Pulsar/Shader/: Common.inc.hlsl  DefaultVS.inc.hlsl  DefaultVS.vs.hlsl  Lit.shader  Lit.vs.hlsl  Missing.sh.json
Pulsar/Shader(deprecated)/: DeferredShading.inc.hlsl  Line.ps.hlsl  Line.vs.hlsl  Lit.ps.hlsl  Lit.sh.json  Missing.shader
Pulsar/Source/: .gitignore  CMakeLists.txt
Pulsar/Source/Pulsar/: AppInstance.h  AssetRef.cpp  CMakeLists.txt  EngineAppInstance.cpp  Logger.cpp  Logger.h  Node.cpp  ObjectBase.cpp  RenderableProxy.cpp  RenderableProxy.h  Scene.h  Ticker.h  main.cpp
Pulsar/Source/Pulsar/Assets/: Material.h  RenderTexture.cpp  Texture2D.h
Pulsar/Source/Pulsar/Components/: CameraComponent.cpp  PlayableComponent.cpp  RendererComponent.h  StaticMeshRendererComponent.cpp  TransformComponent.cpp
Pulsar/Source/Pulsar/Private/Windows/: RenderInterface.cpp
Pulsar/Source/Pulsar/Rendering/: ShaderPass.h
Pulsar/Source/Pulsar/include/Pulsar/: AppInstance.h  Application.h  Assembly.h  AssetManager.h  AssetObject.h  AssetPackage.h  AssetRef.h  AssetSerializerUtil.h  BuiltinAsset.h  BuiltinRP.h  CameraManager.h  EngineAppInstance.h  EngineContentTable.h  EngineMath.h  Gizmos.h  HitResult.h  IBindGPU.h  ImGuiImpl.h  MaterialParameterValue.h  MaterialRenderer.h  Node.h  ObjectBase.h  Prefab.h  Scene.h  Simulate.h  (+7 more)
Pulsar/Source/Pulsar/src/: AppInstance.cpp  Application.cpp  AssetManager.cpp  AssetObject.cpp  AssetPackage.cpp  AssetSerializerUtil.cpp  BuiltinRP.cpp  CameraManager.cpp  EngineAppInstance.cpp  EngineMath.cpp  Gizmos.cpp  ImGuiImpl.cpp  MaterialRenderer.cpp  Math.cpp  Node.cpp  ObjectBase.cpp  Prefab.cpp  Scene.cpp  Simulate.cpp  Viewport.cpp  World.cpp  forkawesome-webfont.ttf.h  main.cpp  test.cpp
Pulsar/Source/PulsarEd/: AssetDatabase.h  CMakeLists.txt  EditorAppInstance.h  SelectionSet.cpp
Pulsar/Source/PulsarEd/AssetProviders/: MeshAssetProvider.h
Pulsar/Source/PulsarEd/Components/: Grid3DComponent.h  StdEditCameraControllerComponent.cpp
Pulsar/Source/PulsarEd/EditorModes/: EditorModeEdit.h
Pulsar/Source/PulsarEd/Menus/: ISubMenu.h  Menu.cpp  MenuEntrySubMenu.h
Pulsar/Source/PulsarEd/PropertiesPanel/: PropertiesNodePanel.cpp
Pulsar/Source/PulsarEd/PropertyControls/: MaterialPropertyControl.cpp  Matrix4fPropertyControl.h  Quat4fPropertyControl.cpp  Vector2fPropertyControl.cpp
Pulsar/Source/PulsarEd/Subsystems/: EditorSubsystem.cpp  EditorSubsystem.h
Pulsar/Source/PulsarEd/Windows/: ConsoleWindow.cpp  EditorWindowManager.h  OutlinerWindow.h  PropertiesWindow.cpp  SceneWindow.cpp  WorkspaceWindow.cpp  WorkspaceWindow.h
Pulsar/Source/PulsarEd/src/: AssetDatabase.cpp  EditorAppInstance.cpp  EditorLogRecorder.cpp  EditorNode.cpp  EditorRenderPipeline.h  EditorWorld.cpp  EditorWorldManager.cpp  SelectionSet.cpp  Workspace.cpp  main.cpp
Pulsar/Source/PulsarGEd/: CMakeLists.txt
Pulsar/Tools/: BinaryToH.py  copy.bat
(+1208 files in other folders)
