project(SDL2lib)

set(SDL_3DNOW OFF)
set(SDL_ALTIVEC OFF)
set(SDL_ATOMIC OFF)
set(SDL_AUDIO OFF)
set(SDL_CCACHE OFF)
set(SDL_CPUINFO OFF)
set(SDL_DIRECTX OFF)
set(SDL_DISKAUDIO OFF)
set(SDL_DUMMYAUDIO OFF)
set(SDL_DUMMYVIDEO OFF)
#set(SDL_EVENTS OFF)
set(SDL_FILE OFF)
set(SDL_FILESYSTEM OFF)
set(SDL_HAPTIC OFF)
set(SDL_HIDAPI OFF)
set(SDL_HIDAPI_JOYSTICK OFF)
set(SDL_LIBUDEV OFF)
#set(SDL_LOADSO OFF)
set(SDL_LOCALE OFF)
set(SDL_MISC OFF)
set(SDL_MMX OFF)
set(SDL_OFFSCREEN OFF)
set(SDL_OPENGL OFF)
set(SDL_OPENGLES OFF)
set(SDL_POWER OFF)
set(SDL_RENDER OFF)
set(SDL_RENDER_D3D OFF)
set(SDL_RENDER_METAL OFF)
set(SDL_SENSOR OFF)
set(SDL_SHARED OFF)
set(SDL_SSE OFF)
set(SDL_SSE2 OFF)
set(SDL_SSE3 OFF)
set(SDL_SSEMATH OFF)
set(SDL_TEST OFF)
#set(SDL_THREADS OFF)
#set(SDL_TIMERS OFF)
#set(SDL_VIDEO OFF)
set(SDL_VULKAN ON)
set(SDL_WASAPI OFF)

add_subdirectory(SDL)

add_library(${PROJECT_NAME} INTERFACE)

target_include_directories(${PROJECT_NAME} INTERFACE "./SDL/include")
target_link_libraries(${PROJECT_NAME} INTERFACE SDL2::SDL2-static)